# consilium

./: .gitignore  LICENSE  README.md  README.ru.md  README.uk.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
clients/: README.md  hub-block.txt
clients/claude-code/consult-peer/: SKILL.md
clients/claude-code/hooks/: README.md  consult-nudge.sh
config/: council.json
council/: __init__.py  cli.py  config.py  orchestrator.py  recipes.py  roster.py  spawn.py
docs/: architecture.md  consulting-guide.md  examples.md  usage.md
tests/: test_config.py  test_config_errors.py  test_council_status.py  test_lifecycle.py  test_recipes_lens.py  test_recipes_verify.py  test_roster.py  test_verify_sources.py
